# CS485_conways_game_of_life

./: CMakeLists.txt  CMakeLists.txt.in  README.md
execution/: CMakeLists.txt  README.md
execution/examples/: dummy_mock_test.cc  dummy_test.cc  readPipeExample.cpp  writePipeExample.cpp
execution/include/execution/impl/: dispatch.h  hash_map_frame.h  hash_map_frame_obj_API_adapter.h  pipe.h  simple_cell.h  simple_world.h
execution/include/execution/interfaces/: cell.h  frame.h  obj_API_adapter.h  world.h
execution/include/execution/tests/: cell.h  frame.h  mock_cell.h  mock_frame.h  mock_objlib_dispatcher.h  schema_provider.h  world.h
execution/src/: cell_test.cc  dispatch.cc  dispatch_test.cc  frame_test.cc  hash_map_frame.cc  hash_map_frame_test.cc  main.cc  mock_cell.cc  obj_lib_integration.cc  pipe.cc  schema_provider.cc  simple_cell_test.cc  simple_world.cc  simple_world_test.cc  world_test.cc
gui/: CMakeLists.txt  README.md
gui/ConwayGUI/: build.xml  manifest.mf
gui/ConwayGUI/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
gui/ConwayGUI/src/conwaygui/: ApplicationManager.java  CommandManager.java  CoordGrouping.java  Coordinate.java  GuiFileSelection.form  GuiFileSelection.java  GuiMain.form  GuiMain.java  JsonMessage.java  OnCloseListener.java  RenderPanel.form  RenderPanel.java
gui/ConwayGUI/src/testing/: MockData_View.java  point.json  result.json
gui/ConwayGUI/tmp/: outPipe
json/: README.md  command.schema.json  get_frame_params.schema.json  get_next_params.schema.json  new_frame_params.schema.json  new_world_params.schema.json  point.schema.json  region.schema.json  result.schema.json
objlib/: CMakeLists.txt  README.md
objlib/Documentation/html/: annotated.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_9f53777903e87238d4c34166de0456b3.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_vars.html  hierarchy.html  index.html  namespacemembers.html  namespacemembers_enum.html  namespacemembers_eval.html  namespaces.html
objlib/Documentation/html/d0/dbb/: World_8hpp.html  World_8hpp_source.html
objlib/Documentation/html/d1/d7d/: classReceiverBase-members.html
objlib/Documentation/html/d1/de7/: namespaceol.html
objlib/Documentation/html/d3/dae/: Frame_8hpp.html  Frame_8hpp_source.html
objlib/Documentation/html/d5/da5/: classol_1_1ObjDispatcher.html
objlib/Documentation/html/d5/de0/: Frame_8cpp.html
objlib/Documentation/html/d6/d39/: classWorld.html
objlib/Documentation/html/d7/dfe/: World_8cpp.html
objlib/Documentation/html/d8/d2b/: classWorld-members.html
objlib/Documentation/html/d8/d3f/: classFrame-members.html
objlib/Documentation/html/da/d48/: classol_1_1ObjDispatcher-members.html
objlib/Documentation/html/da/d78/: ObjDispatcher_8cpp.html
objlib/Documentation/html/da/d9d/: ReceiverBase_8hpp.html  ReceiverBase_8hpp_source.html
objlib/Documentation/html/da/ddd/: README_8md.html  ReceiverBase_8cpp.html
objlib/Documentation/html/dc/d4a/: classReceiverBase.html
objlib/Documentation/html/de/dd2/: classFrame.html
objlib/Documentation/html/df/db2/: ObjDispatcher_8hpp.html  ObjDispatcher_8hpp_source.html
objlib/Documentation/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  classes_0.js  classes_1.js  classes_2.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_7.js  files_0.js  files_1.js  files_2.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_8.js  namespaces_0.js  pages_0.js  searchdata.js  variables_0.js  variables_2.js  (+3 more)
objlib/doxygen/: .gitignore  README.md  objlib-doxygen
objlib/examples/: create_world.cpp  dummy_mock_test.cc  dummy_test.cc
objlib/include/all/: .ObjDispatcher.hpp.swp  Frame.hpp  ObjDispatcher.hpp  ReceiverBase.hpp  World.hpp
objlib/src/: Frame.cpp  ObjDispatcher.cpp  ReceiverBase.cpp  World.cpp
objlib/test/: FrameTest.cpp  ObjDispatcherTest.cpp  WorldTest.cpp
scripting_language/: CMakeLists.txt  README.md
scripting_language/include/: ParseNode.h  polylex.h
scripting_language/src/: ParseNode.cpp  gettoken.cpp  scriptMain.cpp
scripting_language/test/: ScriptTest.cpp  local_build.sh  testScript1.in  testScript2.in  testScript3.in  testScript4.in  test_script.in  test_script2.in  test_script3.in
